fixed alignment

--- a/assets/style/subfolder/home.css
+++ b/assets/style/subfolder/home.css
@@ -81,7 +81,7 @@ dark red: #521818
     display: flex;
     flex-direction: row;
     margin-top: 40px;
-    height:70vh;
+    
     justify-content: space-around;
 }
 
@@ -337,13 +337,7 @@ footer{
     }
     
     
-    .event{
-        display: flex;
-        flex-direction: column;
-        margin-top: 40px;
-        height:70vh;
-        justify-content: space-around;
-    }
+   
     
     .card {
         height: 320px;
@@ -483,8 +477,8 @@ footer{
     .event{
         display: flex;
         flex-direction: column;
-        margin-top:30px;
-        height:70vh;
+        margin-top:20px;
+        height: 70vh;
        
         padding-bottom: 50px;
     }
@@ -659,10 +653,11 @@ footer{
     
     
     .event{
+        
         display: flex;
         flex-direction: row;
         margin-top: 40px;
-        height:70vh;
+    
         justify-content: space-around;
         
     }
@@ -779,14 +774,14 @@ footer{
     .event{
         display: flex;
         flex-direction: row;
-        margin-top: 40px;
+        margin-top: 50px;
         height:70vh;
         justify-content: space-around;
     }
     
     .card {
         margin-top: 30px;
-        height: 500px;
+        height: 450px;
         
         border-radius: 20px;
     
@@ -817,7 +812,7 @@ footer{
     
     .eventInfo p{
         font-size: 45px;
-        line-height: 110px;
+        line-height: 90px;
     
         background: -webkit-linear-gradient(#ffffff,#ffffff );
         -webkit-background-clip: text;
@@ -927,15 +922,15 @@ footer{
     
     .event{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         margin-top: 40px;
-        height:70vh;
+        height:80vh;
         justify-content: space-around;
         
     }
     
     .card {
-        height: 240px;
+        height: 400px;
        
         border-radius: 20px;
     
